issue is the image gets cut off with screen size.

--- a/menu.css
+++ b/menu.css
@@ -95,7 +95,7 @@ section {
   z-index: 1; 
   --skew-angle: -5deg;
   --background: linear-gradient( 45deg, #CBA591, #CBA591,#FFEFCB);
-
+  
   position: relative;
   isolation: isolate;
 }
@@ -281,7 +281,7 @@ footer {
 .menu {
   margin: 0 auto;
   background-color: #FFEFCB;
-  width: 700px;
+  width: 50%;
   padding-top: 50px;
   padding-bottom: 50px;
   /*box-shadow: 0px 5px 9px 3px rgba(83, 7, 7, 0.63);*/
